@@ -18,8 +18,8 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 PKG := wireless_tools
-SRC_FILENAME = wireless_tools.26.tar.gz
-EXTRACTED_DIR = wireless_tools.26
+SRC_FILENAME = wireless_tools.27.tar.gz
+EXTRACTED_DIR = wireless_tools.27
 DOWNLOAD_SITES = http://pcmcia-cs.sourceforge.net/ftp/contrib/ \
 		$(CFLINUX_PACKAGES)
 
@@ -40,7 +40,8 @@ build: configure $(BUILT_STAMP)
 
 $(BUILT_STAMP):
 	$(MAKE) -C $(PKG_ROOT) all $(UC_PATH) BUILD_SHARED=y \
-		KERNEL_SRC=$(BUILD_DIR)/kernel
+		KERNEL_SRC=$(BUILD_DIR)/kernel \
+		DEPFLAGS=
 	touch $(BUILT_STAMP)
 
 install: build
